# rapix_bridge

./: CMakeLists.txt  README.md  package.xml  setup.py
irobi_bridge/: CMakeLists.txt  package.xml  setup.py
irobi_bridge/launch/: bridge_server.launch
irobi_bridge/rapps/irobi_bridge/: irobi_bridge.launch  irobi_bridge.rapp
irobi_bridge/scripts/: bridge_server.py
launch/: bridge_server.launch  robosem_bridge.launch
msg/: RobotMotion.msg  TouchSensorEvent.msg
rapix_bridge/: CMakeLists.txt  package.xml
rapix_bridge/rapps/rapix_bridge/: rapix_bridge.parameters  rapix_bridge.rapp
rapix_bridge/src/rapix_bridge/: __init__.py  rapix_bridge.py
rapps/rapix_bridge/: rapix_bridge.launch
rapps/robosem_bridge/: robosem_bridge.interface  robosem_bridge.launch  robosem_bridge.parameters
robosem_bridge/: CMakeLists.txt  package.xml
robosem_bridge/launch/: bridge_server.launch
robosem_bridge/rapps/robosem_bridge/: robosem_bridge.launch  robosem_bridge.rapp
robosem_bridge/scripts/: bridge_server.py
scripts/: bridge_server.py  cmdset.py  robosem_bridge.py
src/robosem_bridge/: __init__.py  robosem_bridge.launch
