<?xml version="1.0"?>
<package>
  <name>robosem_bridge</name>
  <version>0.1.0</version>
  <description>The robosem_bridge package</description>
  
  <maintainer email="dwlee@yujinrobot.com">dwlee</maintainer>
  <author>DongWook Lee</author>
  <license>BSD</license>
 
  <url type="website"></url>
  <url type="repository">https://github.com/yujinrobot/robosem_bridge</url>
  <url type="bugtracker">https://github.com/yujinrobot/robosem_bridge/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rocon_app>rapps/robosem_bridge/robosem_bridge.rapp</rocon_app>
  </export>
</package>