<?xml version="1.0"?>
<package>
  <name>robosem_bridge</name>
  <version>0.0.0</version>
  <description>
    Bridging between ROS and robosem
  </description>

  <maintainer email="dwlee@yujinrobot.com">Dongwook Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/robosem_bridge</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rapix_bridge</build_depend>
  <run_depend>rapix_bridge</run_depend>

  <export>
    <rocon_app>rapps/robosem_bridge/robosem_bridge.rapp</rocon_app>
  </export>
</package>
